--- a/src/main/resources/templates/plogging/plogging-detail.html
+++ b/src/main/resources/templates/plogging/plogging-detail.html
@@ -8,6 +8,7 @@
 
 </head>
 <body>
+<header th:replace=""></header>
 <div class="css-b3oum6">
     <div class="layout">
         <div class="production-selling">
@@ -69,7 +70,61 @@
                                         class="production-selling-header__price__separator"></span><div
                                         class="production-selling-header__price__price-value-wrap"><div
                                         class="production-selling-header__price__price"><span
-                                        class="date">2023.06.02</span><span class="end">마감</span></div></div></span>
+                                        class="date">내용 :</span><span class="end"><!--내용작성란--></span></div></div></span>
+                                </div>
+                            </div>
+                            <div class="production-selling-header__content">
+                                <div class="production-selling-header__price"><span
+                                        class="production-selling-header__price__price-wrap"><span
+                                        class="production-selling-header__price__separator"></span><div
+                                        class="production-selling-header__price__price-value-wrap"><div
+                                        class="production-selling-header__price__price"><span
+                                        class="date">시작지점 : </span><span class="end"></span></div></div></span>
+                                </div>
+                            </div>
+                            <div class="production-selling-header__content">
+                                <div class="production-selling-header__price"><span
+                                        class="production-selling-header__price__price-wrap"><span
+                                        class="production-selling-header__price__separator"></span><div
+                                        class="production-selling-header__price__price-value-wrap"><div
+                                        class="production-selling-header__price__price"><span
+                                        class="date">종료지점 : </span><span class="end"></span></div></div></span>
+                                </div>
+                            </div>
+                            <div class="production-selling-header__content">
+                                <div class="production-selling-header__price"><span
+                                        class="production-selling-header__price__price-wrap"><span
+                                        class="production-selling-header__price__separator"></span><div
+                                        class="production-selling-header__price__price-value-wrap"><div
+                                        class="production-selling-header__price__price"><span
+                                        class="date">모집 시작일</span><span class="end">yy.mm.dd (물결)</span></div></div></span>
+                                </div>
+                            </div>
+                            <div class="production-selling-header__content">
+                                <div class="production-selling-header__price"><span
+                                        class="production-selling-header__price__price-wrap"><span
+                                        class="production-selling-header__price__separator"></span><div
+                                        class="production-selling-header__price__price-value-wrap"><div
+                                        class="production-selling-header__price__price"><span
+                                        class="date">모집 종료일</span><span class="end">yy.mm.dd</span></div></div></span>
+                                </div>
+                            </div>
+                            <div class="production-selling-header__content">
+                                <div class="production-selling-header__price"><span
+                                        class="production-selling-header__price__price-wrap"><span
+                                        class="production-selling-header__price__separator"></span><div
+                                        class="production-selling-header__price__price-value-wrap"><div
+                                        class="production-selling-header__price__price"><span
+                                        class="date">상태 : </span><span class="end"><!--모집중--></span></div></div></span>
+                                </div>
+                            </div>
+                            <div class="production-selling-header__content">
+                                <div class="production-selling-header__price"><span
+                                        class="production-selling-header__price__price-wrap"><span
+                                        class="production-selling-header__price__separator"></span><div
+                                        class="production-selling-header__price__price-value-wrap"><div
+                                        class="production-selling-header__price__price"><span
+                                        class="date">보상</span><span class="end"><!--휴지 몇칸? 몇롤?--></span></div></div></span>
                                 </div>
                             </div>
                             <div class="production-selling-header__info-wrap"></div>
@@ -108,6 +163,7 @@
         </div>
     </div>
 </div>
+<footer th:replace=""></footer>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script>
