--- a/src/main/resources/templates/plogging/plogging.html
+++ b/src/main/resources/templates/plogging/plogging.html
@@ -6,11 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>floc</title>
+    <link rel="stylesheet" href="../../static/css/header-footer/header.css">
+    <link rel="stylesheet" href="../../static/css/header-footer/footer.css">
     <link rel="stylesheet" href="../../static/css/plogging/plogging.css">
     <link rel="stylesheet" href="../../static/css/font.css">
 </head>
 
 <body>
+<header th:replace=""></header>
 <div class="container">
     <div class="project-feed">
         <!-- 카테고리 -->
@@ -253,6 +256,7 @@
         </div>
     </div>
 </div>
+<footer th:replace=""></footer>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script>
