--- a/src/main/resources/templates/header-footer/footer.html
+++ b/src/main/resources/templates/header-footer/footer.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link href="../../static/css/header-footer/footer.css" rel="stylesheet">
-    <link href="../../static/css/notice/notice.css" rel="stylesheet">
-    <link href="../../static/css/font.css" rel="stylesheet">
+    <link href="/css/header-footer/footer.css" rel="stylesheet">
+    <link href="/css/notice/notice.css" rel="stylesheet">
+    <link href="/css/font.css" rel="stylesheet">
 </head>
 
 <body>
