--- a/src/main/resources/templates/header-footer/header-login.html
+++ b/src/main/resources/templates/header-footer/header-login.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link href="../../static/css/header-footer/header.css" rel="stylesheet">
-    <link href="../../static/css/header-footer/header-login.css" rel="stylesheet">
-    <link href="../../static/css/notice/notice.css" rel="stylesheet">
-    <link href="../../static/css/font.css" rel="stylesheet">
+    <link href="/css/header-footer/header.css" rel="stylesheet">
+    <link href="/css/header-footer/header-login.css" rel="stylesheet">
+    <link href="/css/notice/notice.css" rel="stylesheet">
+    <link href="/css/font.css" rel="stylesheet">
 
 </head>
 <body>
@@ -19,7 +19,7 @@
                     <button type="button" class="css-osmvbo"><span class="_menu_24 css-cwcsvq"></span></button>
                 </div>
                 <div class="css-48o8iw" style="height: 100%;"><a class="css-loslz5" style="height :100%;" href="/">
-                    <img src="../../static/image/logo.png" class="css-bsbra5" viewBox="0 0 74 30"
+                    <img src="/image/logo.png" class="css-bsbra5" viewBox="0 0 74 30"
                          style="height: 55px; width: 100px;"
                     >
 
@@ -184,5 +184,5 @@
 </header>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-<script src="../../static/js/header-footer/header.js"></script>
+<script src="/js/header-footer/header.js"></script>
 </html>
