--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -4,8 +4,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
-    <link href="../../static/css/admin/admin.css" rel="stylesheet">
-    <link href="../../static/css/admin/side-nav.css" rel="stylesheet">
+    <link href="/css/admin/admin.css" rel="stylesheet">
+    <link href="/css/admin/side-nav.css" rel="stylesheet">
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
@@ -14,7 +14,7 @@
     <!-- header -->
     <div class="header">
         <div class="logoImage">
-            <a href="#"><img src="../../static/image/logo.png"></a>
+            <a href="#"><img src="/image/logo.png"></a>
         </div>
         <div class="title">
             <div>
@@ -33,8 +33,8 @@
                 <li><a href="./admin.html">관리자 계정 관리</a></li>
                 <li><a href="./main.html">메인 관리</a></li>
                 <li><a href="./member.html">회원 관리</a></li>
-                <li><a href="product.html" >상품 관리</a></li>
-                <li><a href="product-form.html" >상품 등록</a></li>
+                <li><a href="./product.html" >상품 관리</a></li>
+                <li><a href="./product-form.html" >상품 등록</a></li>
                 <li><a href="./floging.html" >플로깅 목록</a></li>
                 <li><a href="./notice.html" >공지 사항</a></li>
                 <li><a href="./notice-form.html" >공지 사항 작성</a></li>
@@ -85,5 +85,5 @@
 </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-<script src="../../static/js/admin/side-bar.js"></script>
+<script src="/js/admin/side-bar.js"></script>
 </html>
