--- a/src/main/resources/templates/admin/qna-update.html
+++ b/src/main/resources/templates/admin/qna-update.html
@@ -4,8 +4,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
-    <link href="../../static/css/admin/notice-form.css" rel="stylesheet">
-    <link href="../../static/css/admin/side-nav.css" rel="stylesheet">
+    <link href="/css/admin/notice-form.css" rel="stylesheet">
+    <link href="/css/admin/side-nav.css" rel="stylesheet">
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
@@ -15,7 +15,7 @@
     <!-- header -->
     <div class="header">
         <div class="logoImage">
-            <a href="#"><img src="../../static/image/logo.png"></a>
+            <a href="#"><img src="/image/logo.png"></a>
         </div>
         <div class="title">
             <div>
@@ -96,6 +96,6 @@
 
 </body>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-<script src="../../static/js/admin/side-bar.js"></script>
-<script src="../../static/js/admin/qna-form.js"></script>
+<script src="/js/admin/side-bar.js"></script>
+<script src="/js/admin/qna-form.js"></script>
 </html>
