--- a/src/main/resources/templates/admin/side-bar.html
+++ b/src/main/resources/templates/admin/side-bar.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>side-bar</title>
-    <link href="../../static/css/admin/side-nav.css" rel="stylesheet">
+    <link href="/css/admin/side-nav.css" rel="stylesheet">
 
 </head>
 <body>
@@ -24,6 +24,6 @@
 </nav>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-<script src="../../static/js/admin/side-bar.js"></script>
+<script src="/js/admin/side-bar.js"></script>
 </html>
 
