--- a/src/main/resources/templates/main/main.html
+++ b/src/main/resources/templates/main/main.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>floc</title>
-    <link rel="stylesheet" href="../../static/css/main/main.css">
+    <link rel="stylesheet" href="/css/main/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap"
           rel="stylesheet">
-    <link href="../../static/css/font.css" rel="stylesheet">
+    <link href="/css/font.css" rel="stylesheet">
 </head>
 
 <body>
@@ -87,16 +87,16 @@
         <div class="css-1702gi6 ez4mxhy0">
             <div class="css-2qd0l8 e1387oiq2">
                 <a href="#">
-                <img src="../../static/image/follow.png" class="e1387oiq1 css-1511w17 cate-img">
+                <img src="/image/follow.png" class="e1387oiq1 css-1511w17 cate-img">
                 <span class="css-xd55zv e1387oiq0">팔로잉</span></a></div>
             <div class="css-2qd0l8 e1387oiq2">
                 <a href="">
-                <img src="../../static/image/run.png" class="e1387oiq1 css-1511w17 cate-img">
+                <img src="/image/run.png" class="e1387oiq1 css-1511w17 cate-img">
                 <span class="css-xd55zv e1387oiq0">플로깅 하러가기</span></a></div>
-            <div class="css-2qd0l8 e1387oiq2"><img src="../../static/image/trash.png"
+            <div class="css-2qd0l8 e1387oiq2"><img src="/image/trash.png"
                     class="e1387oiq1 css-1511w17 cate-img">
                 <span class="css-xd55zv e1387oiq0" id="cate-togle">floc collect</span></a></div>
-            <div class="css-2qd0l8 e1387oiq2" id="cate-togle1"><img src="../../static/image/huge.png" class="e1387oiq1 css-1511w17 cate-img">
+            <div class="css-2qd0l8 e1387oiq2" id="cate-togle1"><img src="/image/huge.png" class="e1387oiq1 css-1511w17 cate-img">
                 <span class="css-xd55zv e1387oiq0" >floc 휴지롤</span></a></div>
 
 
@@ -105,10 +105,10 @@
 <!--   열리는 div-->
     <div class="category-1">
         <span class="collect-1">floc collect : 총 10020Kg</span>
-        <img class="img1" src="../../static/image/banner1.png">
+        <img class="img1" src="/image/banner1.png">
     </div>
     <div class="category-2">
-        <span class="collect-2"><img class="cate-img" src="../../static/image/huge.png">floc가 모은 휴지롤 : 총 100개</span>
+        <span class="collect-2"><img class="cate-img" src="/image/huge.png">floc가 모은 휴지롤 : 총 100개</span>
     </div>
     <!-- /카테고리 -->
 <!--    상품목록-->
