--- a/src/main/resources/templates/mypage/my-product.html
+++ b/src/main/resources/templates/mypage/my-product.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap"
           rel="stylesheet">
-    <link href="../../static/css/mypage/my-product.css" rel="stylesheet">
+    <link href="/css/mypage/my-product.css" rel="stylesheet">
 </head>
 <body>
 <div class="css-b3oum6">
@@ -157,8 +157,8 @@
                                     <div class="css-prip86 e1lm7yo60"><a class="css-beq49r e1vfbmcc3"
                                                                          href="/projects/139467/detail"><img
                                             class="css-1b4920d e1vfbmcc2"
-                                            src="../../static/image/mypage/qr.png"
-                                            srcset="../../static/image/mypage/qr.png"></a>
+                                            src="/image/mypage/qr.png"
+                                            srcset="/image/mypage/qr.png"></a>
                                     </div>
                                     <div class="css-1647809 e1e2zisd4"><h2 class="css-z2d3s1 e1e2zisd2">나만의 작은 방, 블랙 컬러
                                         인테리어로 무드
