--- a/src/main/resources/templates/mypage/users-edit-password.html
+++ b/src/main/resources/templates/mypage/users-edit-password.html
@@ -10,9 +10,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap"
           rel="stylesheet">
-    <link href="../../static/css/font.css" rel="stylesheet">
-    <link href="../../static/css/mypage/users.css" rel="stylesheet">
-    <link href="../../static/css/mypage/users-edit-password.css" rel="stylesheet">
+    <link href="/css/font.css" rel="stylesheet">
+    <link href="/css/mypage/users.css" rel="stylesheet">
+    <link href="/css/mypage/users-edit-password.css" rel="stylesheet">
 </head>
 </head>
 <body>
