--- a/src/main/resources/templates/login/new_password_email.html
+++ b/src/main/resources/templates/login/new_password_email.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>가입한 이메일 주소 입력 페이지</title>
 </head>
-<link href="../../resources/static/css/login/new_password_email.css" rel="stylesheet"/>
-<link href="../../resources/static/css/font.css" rel="stylesheet"/>
+<link href="/css/login/new_password_email.css" rel="stylesheet"/>
+<link href="/css/font.css" rel="stylesheet"/>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
