--- a/src/main/resources/templates/mypage/my-qna-write.html
+++ b/src/main/resources/templates/mypage/my-qna-write.html
@@ -11,7 +11,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap"
       rel="stylesheet">
-<link href="../../static/css/mypage/my-qna-write.css" rel="stylesheet">
+<link href="/css/mypage/my-qna-write.css" rel="stylesheet">
 <body>
 <div class="css-b3oum6">
     <div class="layout">
