--- a/src/main/resources/templates/plogging/plogging-detail.html
+++ b/src/main/resources/templates/plogging/plogging-detail.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>플로깅 목록 상세보기</title>
-    <link rel="stylesheet" href="../../static/css/product/detail.css">
-    <link rel="stylesheet" href="../../static/css/font.css">
+    <link rel="stylesheet" href="/css/product/detail.css">
+    <link rel="stylesheet" href="/css/font.css">
 
 </head>
 <body>
