--- a/src/main/resources/templates/admin/floging-estimate.html
+++ b/src/main/resources/templates/admin/floging-estimate.html
@@ -4,8 +4,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
-    <link href="/css/admin/notice-form.css" rel="stylesheet">
-    <link href="/css/admin/side-nav.css" rel="stylesheet">
+    <link href="../../static/css/admin/notice-form.css" rel="stylesheet">
+    <link href="../../static/css/admin/side-nav.css" rel="stylesheet">
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
