--- a/src/main/resources/templates/notice/notice-detail.html
+++ b/src/main/resources/templates/notice/notice-detail.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link href="/css/notice/notice.css" rel="stylesheet">
-    <link href="/css/notice/notice-detail.css" rel="stylesheet">
+    <link href="../../static/css/notice/notice.css" rel="stylesheet">
+    <link href="../../static/css/notice/notice-detail.css" rel="stylesheet">
     <link href="/css/font.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
