--- a/src/main/resources/templates/product/product-detail.html
+++ b/src/main/resources/templates/product/product-detail.html
@@ -5,7 +5,7 @@
     <title>제품 상세정보 페이지</title>
     <link rel="stylesheet" href="/css/header-footer/header.css">
     <link rel="stylesheet" href="/css/header-footer/footer.css">
-    <link rel="stylesheet" href="/css/product/detail.css">
+    <link rel="stylesheet" href="../../static/css/product/detail.css">
     <link rel="stylesheet" href="/css/font.css">
 </head>
 <body>
